Interceptor adicionado, mas com erros

--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title class="ion-margin-horizontal">Entrar</ion-title>
+    <ion-title class="ion-margin-horizontal">Home</ion-title>
     <ion-buttons slot="primary">
       <ion-button routerLink="/user">
         <ion-icon name="person" slot="icon-only"></ion-icon>
@@ -66,8 +66,8 @@
             expand="block"
             [disabled]="!f.valid"
           >
-            Entrar
-            <input type="submit" style="display: none">
+          Entrar
+          <input type="submit" style="display: none">
           </ion-button>
         </ion-col>
       </ion-row>
