--- a/src/app/user/user.page.html
+++ b/src/app/user/user.page.html
@@ -10,13 +10,37 @@
 <ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col size="6" offset="3">
+      <ion-col size="12" size-sm="8" offset-sm="2" text-center>
         <ion-card>
-          <ion-img [src]="user.imgUrl"></ion-img>
-          <ion-list>
-            <ion-text>{{ user.email }}</ion-text>
-          </ion-list>
-          </ion-card>
+          <ion-card-header>
+            <ion-card-title>Title</ion-card-title>
+          </ion-card-header>
+          <ion-img></ion-img>
+          <ion-card-subtitle>{{ user.email }}</ion-card-subtitle>
+          <ion-card-content>
+            <p>Info</p>
+          </ion-card-content>
+          <div>
+            <ion-button>
+              button
+            </ion-button>
+          </div>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12" size-sm="8" offset-sm="2" text-center>
+        <ion-virtual-scroll approxItemHeight="70px">
+          <ion-item>
+            <ion-thumbnail slot="start">
+              <ion-img [src]="user.imgUrl"></ion-img>
+            </ion-thumbnail>
+            <ion-label>
+              <h2>Título</h2>
+              <p>Conteudo</p>
+            </ion-label>
+          </ion-item>
+        </ion-virtual-scroll>
       </ion-col>
     </ion-row>
   </ion-grid>
