Bearer authorization adicionado, storage e logout pararam de funcionar

--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title class="ion-margin-horizontal">Home</ion-title>
+    <ion-title position="center">Entrar</ion-title>
     <ion-buttons slot="primary">
       <ion-button routerLink="/user">
         <ion-icon name="person" slot="icon-only"></ion-icon>
