--- a/src/app/user/user.page.html
+++ b/src/app/user/user.page.html
@@ -15,7 +15,7 @@
           <ion-card-header>
             <ion-card-title>Title</ion-card-title>
           </ion-card-header>
-          <ion-img></ion-img>
+          <ion-img [src]="user.imgUrl"></ion-img>
           <ion-card-subtitle>{{ user.email }}</ion-card-subtitle>
           <ion-card-content>
             <p>Info</p>
