Login, Bearer, logout e storage(auth e user) funcionais

--- a/src/app/user/user.page.html
+++ b/src/app/user/user.page.html
@@ -15,8 +15,8 @@
           <ion-card-header>
             <ion-card-title>Title</ion-card-title>
           </ion-card-header>
-          <ion-img [src]="user.imgUrl"></ion-img>
-          <ion-card-subtitle>{{ user.email }}</ion-card-subtitle>
+          <ion-img ></ion-img>
+          <ion-card-subtitle></ion-card-subtitle>
           <ion-card-content>
             <p>Info</p>
           </ion-card-content>
@@ -33,7 +33,7 @@
         <ion-virtual-scroll approxItemHeight="70px">
           <ion-item>
             <ion-thumbnail slot="start">
-              <ion-img [src]="user.imgUrl"></ion-img>
+              <ion-img></ion-img>
             </ion-thumbnail>
             <ion-label>
               <h2>Título</h2>
