--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <ion-menu side="start">
     <ion-header>
       <ion-toolbar>
-        <ion-title>
+        <ion-title text-center>
           Título
         </ion-title>
       </ion-toolbar>
@@ -12,23 +12,23 @@
       <ion-list>
         <ion-menu-toggle>
           <ion-item lines="none" routerLink="/home">
-            <ion-icon name="business" slot="start"></ion-icon>
+            <ion-icon name="home" slot="start"></ion-icon>
             <ion-label>Home</ion-label>
           </ion-item>
         </ion-menu-toggle>
-        <ion-menu-toggle>
+        <ion-menu-toggle *ngIf="previousAuthState">
           <ion-item lines="none" routerLink="/user">
-            <ion-icon name="checkbox-outline" slot="start"></ion-icon>
+            <ion-icon name="person" slot="start"></ion-icon>
             <ion-label>Usuário</ion-label>
           </ion-item>
         </ion-menu-toggle>
-        <ion-menu-toggle>
+        <ion-menu-toggle *ngIf="!previousAuthState">
           <ion-item lines="none" routerLink="/auth">
-            <ion-icon name="checkbox-outline" slot="start"></ion-icon>
+            <ion-icon name="log-in" slot="start"></ion-icon>
             <ion-label>Entrar</ion-label>
           </ion-item>
         </ion-menu-toggle>
-        <ion-menu-toggle>
+        <ion-menu-toggle *ngIf="previousAuthState">
           <ion-item lines="none" (click)="onLogout()" button>
             <ion-icon name="exit" slot="start"></ion-icon>
             <ion-label>Sair</ion-label>
