--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -3,12 +3,13 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title position="center">Entrar</ion-title>
-    <ion-buttons slot="primary">
-      <ion-button routerLink="/user">
-        <ion-icon name="person" slot="icon-only"></ion-icon>
-      </ion-button>
-    </ion-buttons>
+    <ion-title text-center>Entrar</ion-title>
+    <ion-buttons slot="primary" >
+        <ion-button routerLink="/home">
+          <ion-text>Home</ion-text>
+          <ion-icon name="home" slot="end"></ion-icon>
+        </ion-button>
+      </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
