--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,9 +3,9 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title class="ion-margin-horizontal">Home</ion-title>
+    <ion-title text-center>Home</ion-title>
     <ion-buttons slot="primary">
-      <ion-button routerLink="/user">
+      <ion-button routerLink="/auth">
         <ion-icon name="person" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -13,5 +13,5 @@
 </ion-header>
 
 <ion-content>
-
+  <h1 text-center>Página publica</h1>
 </ion-content>
