--- a/src/app/user/user.page.html
+++ b/src/app/user/user.page.html
@@ -1,47 +1,12 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Usuario</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col size="12" size-sm="8" offset-sm="2" text-center>
-        <ion-card>
-          <ion-card-header>
-            <ion-card-title>Title</ion-card-title>
-          </ion-card-header>
-          <ion-img ></ion-img>
-          <ion-card-subtitle></ion-card-subtitle>
-          <ion-card-content>
-            <p>Info</p>
-          </ion-card-content>
-          <div>
-            <ion-button>
-              button
-            </ion-button>
-          </div>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="12" size-sm="8" offset-sm="2" text-center>
-        <ion-virtual-scroll approxItemHeight="70px">
-          <ion-item>
-            <ion-thumbnail slot="start">
-              <ion-img></ion-img>
-            </ion-thumbnail>
-            <ion-label>
-              <h2>Título</h2>
-              <p>Conteudo</p>
-            </ion-label>
-          </ion-item>
-        </ion-virtual-scroll>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-</ion-content>
+<ion-tabs>
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="cursos">
+      <ion-label>Cursos</ion-label>
+      <ion-icon name="school"></ion-icon>
+    </ion-tab-button>
+    <ion-tab-button tab="conta">
+      <ion-label>Conta</ion-label>
+      <ion-icon name="options"></ion-icon>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
