--- a/src/app/user/courses/courses.page.html
+++ b/src/app/user/courses/courses.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title text-center>Cursos</ion-title>
     <ion-buttons slot="primary">
-      <ion-button routerLink="/user" (click)="onLogout()">
+      <ion-button (click)="onLogout()">
         <ion-text>Sair</ion-text>
         <ion-icon name="log-out" slot="end"></ion-icon>
       </ion-button>
