--- a/src/app/user/profile/profile.page.html
+++ b/src/app/user/profile/profile.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title text-center>Conta</ion-title>
     <ion-buttons slot="primary">
-      <ion-button routerLink="/user" (click)="onLogout()">
+      <ion-button (click)="onLogout()">
         <ion-text>Sair</ion-text>
         <ion-icon name="log-out" slot="end"></ion-icon>
       </ion-button>
@@ -22,7 +22,6 @@
             <ion-card-title>{{ user.name }}</ion-card-title>
           </ion-card-header>
           <ion-img class="profile-image" [src]="user.imageProfile"></ion-img>
-          <ion-card-subtitle></ion-card-subtitle>
           <ion-card-content>
             <p>{{ user.email }}</p>
           </ion-card-content>
