Adicionado *ngIf na página Home que verifica autenticação usando storage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,13 @@
     </ion-header>
 
     <ion-content>
+      <ion-grid no-padding >
+        <ion-row>
+          <ion-col no-padding>
+            <ion-img src="/assets/img/placeholder.png"></ion-img>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
       <ion-list>
         <ion-menu-toggle>
           <ion-item lines="none" routerLink="/home">
