--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,13 +5,30 @@
     </ion-buttons>
     <ion-title text-center>Home</ion-title>
     <ion-buttons slot="primary">
-      <ion-button routerLink="/auth">
-        <ion-icon name="person" slot="icon-only"></ion-icon>
+      <ion-button routerLink="/user" *ngIf="isAuth">
+        <ion-avatar slot="end">
+          <ion-img [src]="user.imageProfile"></ion-img>
+        </ion-avatar>
+      </ion-button>
+      <ion-button routerLink="/auth" *ngIf="!isAuth">
+        <ion-text>Entrar</ion-text>
+        <ion-icon name="log-in" slot="end"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <h1 text-center>Página publica</h1>
+  <ion-grid no-padding >
+    <ion-row>
+      <ion-col no-padding>
+        <ion-img class="home-image" src="/assets/img/placeholder.png"></ion-img>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3" text-center padding>
+        <h1 text-center>Página Pública</h1>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
